Police-officer swagger update
